# rusty-jwt-tools

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml  run-tests.sh  rust-toolchain.toml  tarpaulin.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: audit.yml  coverage.yml  deny.yml  label-pr.yml  rust.yml  semantic-commit-lint.yml
acme/: Cargo.toml  README.md
acme/src/: account.rs  authz.rs  certificate.rs  chall.rs  directory.rs  docker.rs  error.rs  finalize.rs  identifier.rs  identity.rs  jws.rs  lib.rs  order.rs
acme/src/docker/: dex.rs  ldap.rs  mod.rs  stepca.rs  wiremock.rs
acme/src/identity/: mod.rs  status.rs  thumbprint.rs
acme/src/x509_check/: mod.rs
acme/src/x509_check/revocation/: crl_info.rs  crl_store.rs
cli/: Cargo.toml  README.md  notes.txt
cli/src/: access_generate.rs  access_verify.rs  build.rs  jwk.rs  lib.rs  main.rs  parse.rs  pem.rs  utils.rs  verify.rs
data/: claims.json  jwt.txt  kp-ed25519.pem  kp-p256.pem  kp-p384.pem  vc1.json  vc2.json  vp.json
e2e-identity/: Cargo.toml  README.md
e2e-identity/src/: lib.rs  types.rs
e2e-identity/tests/: api.rs  e2e.rs
e2e-identity/tests/utils/: cfg.rs  display.rs  fmk.rs  helpers.rs  idp.rs  mod.rs
e2e-identity/tests/utils/docker/: authelia.rs  keycloak.rs  mod.rs  stepca.rs
e2e-identity/tests/utils/docker/authelia/: mod.rs
ffi/: Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  shell.nix
ffi/bindings/haskell/: Makefile  Setup.hs  rusty-jwt-tools-hs.cabal
ffi/bindings/haskell/src/: RustyJwtToolsHs.hs
ffi/bindings/haskell/test/: Spec.hs
ffi/src/: haskell.rs  lib.rs
ffi/test/: test-bindings.py
jwt/: Cargo.toml  README.md
jwt-ffi/: Cargo.toml  Makefile.toml  README.md
jwt-ffi/bindings/haskell/: rusty-jwt-tools-hs.cabal
jwt-ffi/bindings/haskell/src/: Main.hs  RustyJwtToolsHs.hs
jwt-ffi/bindings/haskell/test/: Spec.hs
jwt-ffi/src/: haskell.rs  lib.rs  mobile.rs  wasm.rs
jwt/src/: alg.rs  client_id.rs  dpop.rs  error.rs  generate_access_token.rs  generate_dpop_access_token.rs  generate_dpop_token.rs  introspect.rs  jkt.rs  jwk.rs  jwk_thumbprint.rs  lib.rs  nonce.rs  pem.rs  test_utils.rs  verify_dpop_token.rs
jwt/src/access/: generate.rs  mod.rs  verify.rs
jwt/src/dpop/: generate.rs  htm.rs  htu.rs  mod.rs  verify.rs
jwt/src/jwe/: alg.rs  mod.rs
jwt/src/jwk/: ecdsa.rs  eddsa.rs  json.rs  mod.rs  rsa.rs
jwt/src/jwt/: generate.rs  mod.rs  verify.rs
jwt/src/model/: alg.rs  client_id.rs  handle.rs  mod.rs  nonce.rs  pem.rs  pk.rs  team.rs
jwt/src/oidc/: context.rs  credential.rs  datetime.rs  id.rs  issuer.rs  mod.rs  presentation.rs  proof.rs  util.rs
jwt/src/test_utils/: access.rs  dpop.rs  jwk.rs  jwt.rs  mod.rs  utils.rs
jwt/tests/: e2e.rs  verifiable_presentation_credential.rs
jwt/tests/resources/: sample-oidc.json
keycloak-mapper/: pom.xml
keycloak-mapper/src/main/java/com/wire/: ClaimsParameterOnRefreshExecutor.java  ClaimsParameterOnRefreshExecutorFactory.java
src/: lib.rs
src/dpop/: mod.rs
x509-check/: Cargo.toml  README.md
x509-check/src/: lib.rs  revocation.rs
x509-check/src/revocation/: cache.rs  crl_info.rs  crl_store.rs  misc.rs
