[workspace]
members = [
  "e2e-identity",
  "jwt",
  "ffi",
  "acme",
  "x509-check",
  "test-wire-server",
]
resolver = "2"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
certval = { git = "https://github.com/wireapp/rust-pki.git", branch = "wire/stable", package = "certval", default-features = false, features = [
  "revocation",
] }
const-oid = { version = "0.9", default-features = false, features = ["std"] }
const_format = { version = "0.2", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
ecdsa = { version = "0.16", default-features = false }
ed25519-dalek = { version = "2.2", default-features = false }
either = { version = "1.15", default-features = false }
flagset = { version = "0.4", default-features = false }
web-time = { version = "1.1.0", default-features = false }
getrandom = { version = "0.2.8", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
itertools = { version = "0.12", default-features = false, features = [
  "use_alloc",
] }
lazy_static = { version = "1.4", default-features = false }
p256 = { version = "0.13", default-features = false }
p384 = { version = "0.13", default-features = false }
p521 = { version = "0.13", default-features = false }
pem = { version = "3.0", default-features = false, features = ["std"] }
percent-encoding = { version = "2.3", default-features = false }
rand = { version = "0.8", default-features = false }
sec1 = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
signature = { version = "2", default-features = false }
thiserror = { version = "2.0", default-features = false }
time = { version = "0.3", default-features = false }
url = { version = "2.5", default-features = false }
uuid = { version = "1.16", default-features = false, features = ["std"] }
x509-cert = { version = "0.2", default-features = false }
zeroize = { version = "1.7", default-features = false }
der = { version = "0.7", default-features = false, features = ["std"] }
jwt-simple = { version = "0.13", git = "https://github.com/wireapp/rust-jwt-simple", tag = "v0.13.0-pre.core-crypto-1.0.0", default-features = false }

# Test or unused dependencies
biscuit = { version = "0.6.0-beta1", git = "https://github.com/beltram/biscuit", tag = "v0.6.2-pre.core-crypto-0.7.0", default-features = false }
clap = { version = "4.5", default-features = false, features = ["std"] }
console = { version = "0.15", default-features = false }
json-patch = { version = "0.3", default-features = false }
tokio = { version = "1.47", default-features = false }
hyper = { version = "1.7", default-features = false }
wasm-bindgen-test = { version = "0.3", default-features = false }
webbrowser = { version = "0.8", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "native-tls",
] }
rstest = { version = "0.19", default-features = false }
rstest_reuse = { version = "0.6", default-features = false }
scraper = { version = "0.23", default-features = false }
html_parser = { version = "0.6", default-features = false }
openidconnect = { version = "4", default-features = false }
josekit = { version = "0.8", default-features = false }
native-tls = { version = "0.2", default-features = false }
testcontainers = { version = "0.24", features = ["reusable-containers"] }
oauth2 = { version = "5", default-features = false }
http = { version = "1", default-features = false }
# Keep keycloak versions in sync (search for this comment to find all places to update)
keycloak = "26.3.202"
rand_chacha = { version = "0.3", default-features = false }
