[workspace]
members = ["jwt", "ffi"]
resolver = "2"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(wasm_bindgen_unstable_test_coverage)',
] }

[workspace.dependencies]
base64 = { version = "0.22", default-features = false, features = ["std"] }
const_format = { version = "0.2", default-features = false }
derive_more = { version = "2.1.0", default-features = false }
ed25519-dalek = { version = "2.2", default-features = false }
web-time = { version = "1.1.0", default-features = false }
p256 = { version = "0.13", default-features = false }
p384 = { version = "0.13", default-features = false }
p521 = { version = "0.13", default-features = false }
percent-encoding = { version = "2.3", default-features = false }
rand = { version = "0.8", default-features = false }
sec1 = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2.0", default-features = false }
url = { version = "2.5", default-features = false }
uuid = { version = "1.19", default-features = false, features = ["std"] }
zeroize = { version = "1.8", default-features = false }
jwt-simple = { version = "0.13", git = "https://github.com/wireapp/rust-jwt-simple", tag = "v0.13.0-pre.core-crypto-1.0.0", default-features = false }

# Test dependencies
wasm-bindgen-test = { version = "0.3", default-features = false }
rstest = { version = "0.26", default-features = false }
rstest_reuse = { version = "0.7", default-features = false }
