[package]
name = "rusty-acme"
description = "ACME types"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
rusty-jwt-tools = { version = "0.9.0", path = "../jwt" }
jwt-simple = { workspace = true }
rusty-x509-check = { version = "0.9.0", path = "../x509-check" }
base64 = "0.22"
url = { version = "2.5", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "wasm-bindgen"] }
x509-cert = "0.2"
const-oid = "0.9"
signature = "2"
ecdsa = "0.16"
ed25519-dalek = "2.1"
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
pem = "3.0"
getrandom = { version = "0.2.8", features = ["js"] }
fluvio-wasm-timer = "0.2"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
hex = "0.4.3"
rusty-jwt-tools = { version = "0.9.0", path = "../jwt", features = ["test-utils"] }
