[package]
name = "rusty-acme"
description = "ACME types"
version = "0.13.0"
edition = "2024"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
rusty-jwt-tools = { version = "0.13.0", path = "../jwt" }
rusty-x509-check = { version = "0.13.0", path = "../x509-check" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jwt-simple = { workspace = true }
base64 = { workspace = true }
url = { workspace = true, features = ["serde"] }
time = { workspace = true, features = [
  "serde",
  "serde-well-known",
  "wasm-bindgen",
] }
x509-cert = { workspace = true }
const-oid = { workspace = true }
signature = { workspace = true }
ecdsa = { workspace = true }
ed25519-dalek = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
pem = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
web-time = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rusty-jwt-tools = { version = "0.13.0", path = "../jwt", features = [
  "test-utils",
] }
wasm-bindgen-test = { workspace = true }
hex = { workspace = true }
