[package]
name = "rusty-jwt-cli"
description = "Cli to handle JWTs"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[dependencies]
rusty-jwt-tools = { version = "0.2", path = "../jwt" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
jwt-simple = "0.11.3"
serde_json = "1.0"
console = "0.15"
