[package]
name = "rusty-jwt-cli"
description = "Cli to handle JWTs"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[dependencies]
rusty-jwt-tools = { version = "0.9.0", path = "../jwt" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
jwt-simple = { workspace = true }
serde_json = { workspace = true }
console = { workspace = true }
