[package]
name = "rusty-jwt-tools-ffi"
description = "Exposing utilities to handle JWTs in Haskell"
version = "0.4.4"
edition = "2021"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
name = "rusty_jwt_tools_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rusty-jwt-tools = { version = "0.4.4", path = "../jwt" }
uuid = "1.3"
