[package]
name = "rusty-jwt-tools-ffi"
description = "Exposing utilities to handle JWTs in Haskell"
version = "0.13.0"
edition = "2024"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
name = "rusty_jwt_tools_ffi"
crate-type = ["cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
rusty-jwt-tools = { version = "0.13.0", path = "../jwt" }
uuid = { workspace = true, features = ["std", "v4"] }

[target.'cfg(target_family = "wasm")'.dependencies.uuid]
workspace = true
features = ["std", "js", "v4"]
