[package]
name = "rusty-jwt-tools-ffi"
description = "Exposing utilities to handle JWTs in Haskell, Android, iOS & WASM"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
name = "rusty_jwt_tools_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rusty-jwt-tools = { version = "0.1", path = "../jwt" }
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

[features]
default = []
haskell = []
mobile = []
