[package]
name = "rusty-jwt-tools"
description = "Utilities to handle JWTs"
version = "0.13.0"
edition = "2024"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
name = "rusty_jwt_tools"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
sec1 = { workspace = true }
url = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
jwt-simple = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
derive_more = { workspace = true, features = ["from", "into", "deref"] }
const_format = { workspace = true }
percent-encoding = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
web-time = { workspace = true }
rand = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies.uuid]
workspace = true
features = ["std", "js"]

[features]
test-utils = []
rsa = ["jwt-simple/rsa"]
