[package]
name = "rusty-jwt-tools"
description = "Utilities to handle JWTs"
version = "0.13.0"
edition = "2024"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
name = "rusty_jwt_tools"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
p256 = { workspace = true }
p384 = { workspace = true }
p521 = { workspace = true }
sec1 = { workspace = true }
url = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
jwt-simple = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
derive_more = { workspace = true, features = ["from", "into", "deref"] }
const_format = { workspace = true }
percent-encoding = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
rstest = { version = "0.26", default-features = false }
rstest_reuse = { version = "0.7", default-features = false }
ed25519-dalek = { version = "2.2", default-features = false }
web-time = { version = "1.1.0", default-features = false }
rand = { version = "0.8", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies.uuid]
workspace = true
features = ["std", "js"]

[features]
test-utils = []
rsa = ["jwt-simple/rsa"]
