[package]
name = "rusty-jwt-tools"
description = "Utilities to handle JWTs"
version = "0.14.0"
edition = "2024"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[lib]
name = "rusty_jwt_tools"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["std"] }
const_format = { version = "0.2", default-features = false }
derive_more = { version = "2.1.1", features = ["from", "into", "deref"] }
jwt-simple = { version = "0.13", git = "https://github.com/wireapp/rust-jwt-simple", tag = "v0.13.0-pre.core-crypto-1.0.0", default-features = false }
p256 = { version = "0.13", default-features = false }
p384 = { version = "0.13", default-features = false }
p521 = { version = "0.13", default-features = false }
percent-encoding = { version = "2.3", default-features = false }
sec1 = { version = "0.7", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2.0", default-features = false }
url = { version = "2.5", features = ["serde"] }
uuid = { workspace = true, features = ["std", "v4"] }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
rstest = { version = "0.26", default-features = false }
rstest_reuse = { version = "0.7", default-features = false }
ed25519-dalek = { version = "2.2", default-features = false }
web-time = { version = "1.1.0", default-features = false }
rand = { version = "0.8", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies.uuid]
workspace = true
features = ["std", "js", "v4"]

[features]
test-utils = []
rsa = ["jwt-simple/rsa"]
