[package]
name = "rusty-x509-check"
description = "Utilities to assert a X.509 certificate's validity and revocation status"
version = "0.12.0"
edition = "2021"
repository = "https://github.com/wireapp/rusty-jwt-tools"
license = "MPL-2.0"
publish = false

[dependencies]
web-time = { workspace = true }
flagset = { workspace = true }
x509-cert = { workspace = true }
const-oid = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
certval = { workspace = true }
der = { workspace = true }
