name:                rusty-jwt-tools-hs
version:             0.0.1.0
build-type:          Simple
cabal-version:       >=1.10

executable rusty-jwt-tools-hs-exec
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  other-modules:       RustyJwtToolsHs
  extra-libraries:     rusty_jwt_tools_ffi, pthread
  extra-lib-dirs:      target/debug

library
  hs-source-dirs:      src
  exposed-modules:     RustyJwtToolsHs
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  extra-libraries:     rusty_jwt_tools_ffi, pthread
  extra-lib-dirs:      target/debug
